--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,7 @@
+:root{
+  --primary-green: #4F6F52;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,7 +11,21 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+ul{
+  padding: 0;
 }
+
+li {
+  list-style: none;
+}
+
+
+
+.web_body{
+  display: flex;
+}
+
+.page{
+  padding: 1rem;
+}
+
