--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,11 +2,14 @@
   --primary-green: #4F6F52;
 }
 
+@font-face {
+  font-family: recoleta;
+  src: url("assets/fonts/Recoleta-RegularDEMO.otf") format("opentype");
+  }
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Montserrat",sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -17,6 +20,11 @@ ul{
 
 li {
   list-style: none;
+}
+
+
+.no_display{
+  display: none;
 }
 
 
