--- a/client/src/components/NavBar.css
+++ b/client/src/components/NavBar.css
@@ -5,9 +5,9 @@
     position: absolute;
     background-color: var(--primary-green);
     height: 100vh;
-    width: 12ch;
+    width: 8ch;
     z-index: 10;
-    border-radius:  0 5ch 5ch 0;
+    border-radius:  0 3ch 3ch 0;
     align-items: center;
     padding-right: 1ch;
 }
@@ -18,7 +18,7 @@
 }
 
 .nav_bar-buttons{
-    padding-top: 5ch;
+    padding-top: 2ch;
 }
 
 .nav_bar-button{
@@ -28,9 +28,9 @@
 
 .nav_bar-selected{
     position: absolute;
-    left: 25px;
+    left: 10px;
     width: 3px;
-    height: 5ch;
+    height: 4.5ch;
     background-color: white;
 }
 
@@ -38,6 +38,8 @@
     font-family: recoleta;
     color: white;
     padding-bottom: 5ch;
+    user-select: none;
+    cursor: pointer;
 }
 
 .nav_bar-title{
