--- a/client/src/components/NavBar.css
+++ b/client/src/components/NavBar.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    position: absolute;
+    position: fixed;
     background-color: var(--primary-green);
     height: 100vh;
     width: 8ch;
@@ -13,6 +13,7 @@
 }
 
 .nav_bar_hidden{
+    visibility: hidden;
     position: relative;
     z-index: 0; 
 }
