chore: product qty added

--- a/client/src/components/ProductItem.css
+++ b/client/src/components/ProductItem.css
@@ -12,7 +12,8 @@
 }
 
 .product_item:hover > .product_item-name, 
-.product_item:hover > .product_item-price{
+.product_item:hover > .product_item-price,
+.product_item:hover > .product_item-qty{
     text-decoration: underline;
 }
 
