--- a/client/src/components/Login.css
+++ b/client/src/components/Login.css
@@ -1,7 +1,10 @@
 .login_page-container{
     display: flex;
-    height: auto;
-
+    justify-content: center;
+    align-items: center;
+    height: 85vh;
+    width: 90vw;
+    overflow: hidden;
 }
 
 .login_page-card{
@@ -12,10 +15,10 @@
 .login_page-main{
     display: flex;
     flex-direction: column;
-    width: 50%;
     background-color: var(--primary-background);
-    padding: 50px;
-    
+    width: 50%;
+    padding: 50vw 50px;
+    overflow: hidden;
 }
 
 .login_page-main h1{
