--- a/client/src/components/TitleCard.css
+++ b/client/src/components/TitleCard.css
@@ -1,10 +1,8 @@
 .title_card-card{
     position: relative;
     background-color: var(--primary-green);
-    height: auto;
     overflow: hidden;
-
-
+    padding: 50vh 0;
 }
 .title_card-title{
     display: flex;
