--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,7 +11,7 @@
 
 @font-face {
   font-family: recoleta;
-  src: url("assets/fonts/Recoleta-RegularDEMO.otf") format("opentype");
+  src: url("assets/fonts/RecoletaAlt-Medium.ttf");
   }
 
 body {
