--- a/client/src/index.css
+++ b/client/src/index.css
@@ -90,3 +90,15 @@ button{
   display: flex;
   justify-content: center;
 }
+
+.editable_text{
+  background-color: #00000000;
+  font-family: "Montserrat",sans-serif;
+  color: white;
+  border: none;
+  width: 100%;
+}
+
+.editable_text:focus{
+  outline: none;
+}
