--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -1,14 +1,3 @@
 .header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.header-buttons ul{
-    display: flex;
-    justify-content: space-evenly;
-}
-
-.header-buttons li{
-    margin: 0 10px;
+    margin-bottom: 20px;
 }
