fix: minor design changes

--- a/client/src/components/CartTable.css
+++ b/client/src/components/CartTable.css
@@ -1,26 +1,23 @@
 .cart_table{
     width: 100%;
     margin-top: 30px;
-    border-collapse: collapse;
-}
-
-.cart_table-header tr,
-.cart_table-body tr{
-    border-bottom: 1px solid black;
+    border-collapse: separate;
+    border-spacing: 0 10px;
 }
 
 .cart_table-header th{
     text-align: left;
-    font-size: 20px;
+    font-size: 18px;
     padding-bottom: 10px;
 }
 
 .header-label-product{
-    width: 15%;
+    padding-left: 4ch;
+    width: 25%;
 }
 
 .header-label-name{
-    width: 45%;
+    width: 30%;
 }
 
 .header-label-qty,
@@ -29,20 +26,20 @@
     width: 15%;
 }
 
-
-.cart_table td{
-    text-align: left;
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
-
 .cart_table-row-img img{
     width: 6ch;
     height: 6ch;
+    padding: 1ch;
+    padding-left: 6ch;
+}
+
+.cart_table-row{
+    background-color: rgba(255, 255, 255, 0.912);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);   
 }
 
 .cart_table-row-button{
-    border-radius: 30px;
+    border-radius: 4px;
     margin-top: 5px;
     background-color: var(--secondary-red);
 }
@@ -55,14 +52,9 @@
     height: 4ch;
     width: 50%;
     text-align: center;
-    background-color: var(--primary-background);
-    border-width: 2px;
-    border-radius: 10px;
+    border-width: 1.5px;
+    border-radius: 4px;
     font-family: "Montserrat",sans-serif;
-}
-
-.footer-row{
-    border: none;
 }
 
 .footer-label-subtotal{
@@ -70,11 +62,12 @@
 }
 
 .footer-subtotal-value{
+    font-size: 18px;
     font-weight: bold;
 }
 
 .footer-button-checkout{
-    border-radius: 30px;
+    border-radius: 4px;
     height: 5ch;
     width: 100%;
 }
